-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12
-
Component/s: hotspot
-
b28
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8217020 | 13 | Erik Österlund | P3 | Resolved | Fixed | b04 |
| JDK-8217077 | 12.0.1 | Erik Österlund | P3 | Resolved | Fixed | b03 |
| JDK-8274266 | 11.0.14-oracle | Fairoz Matte | P3 | Resolved | Fixed | b01 |
| JDK-8274542 | 11.0.14 | Martin Doerr | P3 | Resolved | Fixed | b01 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/classfile/classLoaderData.inline.hpp:36), pid=2828,
tid=2845
# assert(!_unloading) failed: This oop is not available to unloading class loader data
#
# JRE version: Java(TM) SE Runtime Environment (12.0) (fastdebug build 12-internal+0-jdk12-jdk.1167)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.1167, mixed mode, tiered, z gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x11a6d1a] Klass::class_loader() const+0x7a
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8217020 assert(!_unloading) failed: This oop is not available to unloading class loader data with ZGC
-
- Resolved
-
-
JDK-8217077 assert(!_unloading) failed: This oop is not available to unloading class loader data with ZGC
-
- Resolved
-
-
JDK-8274266 assert(!_unloading) failed: This oop is not available to unloading class loader data with ZGC
-
- Resolved
-
-
JDK-8274542 assert(!_unloading) failed: This oop is not available to unloading class loader data with ZGC
-
- Resolved
-
- relates to
-
JDK-8057038 Speculative traps not robust when compilation and class unloading are concurrent
-
- Resolved
-
-
JDK-8231501 VM crash in MethodData::clean_extra_data(CleanExtraDataClosure*): fatal error: unexpected tag 99
-
- Resolved
-
-
JDK-8306767 Concurrent repacking of extra data in MethodData is potentially unsafe
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/f1391712
-
Review
openjdk/jdk11u-dev/19
-
Review
openjdk/jdk11u-dev/413
-
Review
openjdk/jdk11u-dev/434