8215889: assert(!_unloading) failed: This oop is not available to unloading class loader data with ZGC

Reviewed-by: coleenp, neliasso